[gd_scene load_steps=13 format=3 uid="uid://b7wlgwr6spoua"]

[ext_resource type="Script" uid="uid://wf8xef8mvt6q" path="res://Script/card_manager.gd" id="1_56fl5"]
[ext_resource type="Script" uid="uid://bwtg0fuqx2de5" path="res://Script/main.gd" id="1_75buv"]
[ext_resource type="Texture2D" uid="uid://dt603c7fwj5ib" path="res://Asset/Main Game/MainGameBackground.png" id="2_3pt4j"]
[ext_resource type="Script" uid="uid://dldnexsstevk" path="res://Script/player_hand.gd" id="3_r34rm"]
[ext_resource type="Script" uid="uid://1kojqqmyjx8e" path="res://Script/deck.gd" id="4_1xcnr"]
[ext_resource type="FontFile" uid="uid://813uw6m7dur7" path="res://Asset/Font/PressStart2P-Regular.ttf" id="5_3pt4j"]
[ext_resource type="Script" uid="uid://ba0ysbiwv3o4a" path="res://Script/input.gd" id="6_ow1sv"]
[ext_resource type="Script" uid="uid://bk8o7ohxnvyxk" path="res://Script/turn_controls.gd" id="7_c2iwn"]
[ext_resource type="Script" uid="uid://bla263qdqi2og" path="res://Script/Playerstats.gd" id="8_3pt4j"]
[ext_resource type="Texture2D" uid="uid://c07g518lcoppr" path="res://Asset/Main Game/Finalboard.png" id="10_7y4ci"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3amdw"]
size = Vector2(213, 202)

[sub_resource type="Environment" id="Environment_7y4ci"]
background_mode = 3
glow_enabled = true
glow_intensity = 1.25
glow_bloom = 0.2
glow_hdr_threshold = 0.72

[node name="Main" type="Node2D"]
script = ExtResource("1_75buv")

[node name="Board" type="Node2D" parent="."]

[node name="MainGameBackground" type="Sprite2D" parent="Board"]
position = Vector2(960, 540)
texture = ExtResource("2_3pt4j")

[node name="Finalboard" type="Sprite2D" parent="Board"]
position = Vector2(1018, 577)
scale = Vector2(0.485, 0.485)
texture = ExtResource("10_7y4ci")

[node name="Label" type="Label" parent="Board"]
offset_left = 676.0
offset_top = 368.0
offset_right = 1220.0
offset_bottom = 504.0
theme_override_colors/font_color = Color(1.5, 1.5, 1.5, 1)
theme_override_fonts/font = ExtResource("5_3pt4j")
theme_override_font_sizes/font_size = 51
text = "DRAW"
horizontal_alignment = 1

[node name="Draw" type="Node2D" parent="Board"]
position = Vector2(935, 505)
script = ExtResource("4_1xcnr")

[node name="Area2D" type="Area2D" parent="Board/Draw"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Board/Draw/Area2D"]
position = Vector2(15, -112)
shape = SubResource("RectangleShape2D_3amdw")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Board"]
environment = SubResource("Environment_7y4ci")

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("1_56fl5")

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("3_r34rm")

[node name="PlayerHand2" type="Node2D" parent="."]
script = ExtResource("3_r34rm")

[node name="PlayerHand3" type="Node2D" parent="."]
script = ExtResource("3_r34rm")

[node name="Input" type="Node2D" parent="."]
script = ExtResource("6_ow1sv")

[node name="TurnControls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_c2iwn")

[node name="HBoxContainer" type="HBoxContainer" parent="TurnControls"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DrawButton" type="Button" parent="TurnControls/HBoxContainer"]
layout_mode = 2

[node name="SkipButton" type="Button" parent="TurnControls/HBoxContainer"]
layout_mode = 2

[node name="HealthLabel1" type="Label" parent="TurnControls/HBoxContainer"]
layout_mode = 2

[node name="BandwidthLabel1" type="Label" parent="TurnControls/HBoxContainer"]
layout_mode = 2

[node name="PacketlossLabel1" type="Label" parent="TurnControls/HBoxContainer"]
layout_mode = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = -49.0
offset_top = -2.0
offset_right = -9.0
offset_bottom = 38.0

[node name="PlayerUI3" type="Control" parent="CanvasLayer/UI"]
layout_mode = 3
anchors_preset = 0
offset_left = -61.0
offset_top = -62.0
offset_right = -21.0
offset_bottom = -22.0
script = ExtResource("8_3pt4j")

[node name="PlayerUI2" type="Control" parent="CanvasLayer/UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 39.0
offset_top = -55.0
offset_right = 79.0
offset_bottom = -15.0
script = ExtResource("8_3pt4j")

[node name="PlayerUI1" type="Control" parent="CanvasLayer/UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 6.0
offset_top = -49.0
offset_right = 46.0
offset_bottom = -9.0
script = ExtResource("8_3pt4j")
